// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`maxBlockSize renders 0 1`] = `
Array [
  .c0 {
  max-block-size: 0;
}

<div
    className="c0"
  />,
  .c0 {
  max-block-size: 0;
}

<div
    className="c0"
  />,
  .c0 {
  max-block-size: 0;
}

<div
    className="c0"
  />,
  .c0 {
  max-block-size: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`maxBlockSize renders function 1`] = `
Array [
  .c0 {
  max-block-size: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  max-block-size: has;
}

<div
    className="c0"
  />,
  .c0 {
  max-block-size: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  max-block-size: has;
}

<div
    className="c0"
  />,
]
`;

exports[`maxBlockSize renders invalid theme path 1`] = `
Array [
  .c0 {
  max-block-size: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  max-block-size: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  max-block-size: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  max-block-size: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`maxBlockSize renders negative number 1`] = `
Array [
  .c0 {
  max-block-size: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  max-block-size: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  max-block-size: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  max-block-size: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`maxBlockSize renders object [breakpoints + standard] 1`] = `
Array [
  .c0 {
  max-block-size: July;
}

@media screen and (min-width:November) {
  .c0 {
    max-block-size: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    max-block-size: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    max-block-size: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    max-block-size: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  max-block-size: July;
}

@media screen and (min-width:November) {
  .c0 {
    max-block-size: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    max-block-size: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    max-block-size: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    max-block-size: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  max-block-size: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    max-block-size: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    max-block-size: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    max-block-size: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    max-block-size: June;
  }
}

<div
    className="c0"
  />,
  .c0 {
  max-block-size: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    max-block-size: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    max-block-size: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    max-block-size: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    max-block-size: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`maxBlockSize renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    max-block-size: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    max-block-size: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    max-block-size: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    max-block-size: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    max-block-size: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    max-block-size: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    max-block-size: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    max-block-size: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    max-block-size: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    max-block-size: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    max-block-size: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    max-block-size: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    max-block-size: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    max-block-size: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    max-block-size: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    max-block-size: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`maxBlockSize renders object [mediaQueries + standart] 1`] = `
Array [
  .c0 {
  max-block-size: July;
}

@media May {
  .c0 {
    max-block-size: August;
  }
}

@media April {
  .c0 {
    max-block-size: September;
  }
}

@media January {
  .c0 {
    max-block-size: November;
  }
}

@media April {
  .c0 {
    max-block-size: August;
  }
}

@media June {
  .c0 {
    max-block-size: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  max-block-size: July;
}

@media May {
  .c0 {
    max-block-size: August;
  }
}

@media April {
  .c0 {
    max-block-size: September;
  }
}

@media January {
  .c0 {
    max-block-size: November;
  }
}

@media April {
  .c0 {
    max-block-size: August;
  }
}

@media June {
  .c0 {
    max-block-size: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  max-block-size: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    max-block-size: November;
  }
}

@media April {
  .c0 {
    max-block-size: January;
  }
}

@media January {
  .c0 {
    max-block-size: December;
  }
}

@media April {
  .c0 {
    max-block-size: April;
  }
}

@media June {
  .c0 {
    max-block-size: May;
  }
}

<div
    className="c0"
  />,
  .c0 {
  max-block-size: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    max-block-size: November;
  }
}

@media April {
  .c0 {
    max-block-size: January;
  }
}

@media January {
  .c0 {
    max-block-size: December;
  }
}

@media April {
  .c0 {
    max-block-size: April;
  }
}

@media June {
  .c0 {
    max-block-size: May;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`maxBlockSize renders object [mediaQueries] 1`] = `
Array [
  @media May {
  .c0 {
    max-block-size: July;
  }
}

@media April {
  .c0 {
    max-block-size: August;
  }
}

@media January {
  .c0 {
    max-block-size: September;
  }
}

@media April {
  .c0 {
    max-block-size: November;
  }
}

@media June {
  .c0 {
    max-block-size: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    max-block-size: July;
  }
}

@media April {
  .c0 {
    max-block-size: August;
  }
}

@media January {
  .c0 {
    max-block-size: September;
  }
}

@media April {
  .c0 {
    max-block-size: November;
  }
}

@media June {
  .c0 {
    max-block-size: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    max-block-size: January;
  }
}

@media April {
  .c0 {
    max-block-size: December;
  }
}

@media January {
  .c0 {
    max-block-size: April;
  }
}

@media April {
  .c0 {
    max-block-size: May;
  }
}

@media June {
  .c0 {
    max-block-size: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    max-block-size: January;
  }
}

@media April {
  .c0 {
    max-block-size: December;
  }
}

@media January {
  .c0 {
    max-block-size: April;
  }
}

@media April {
  .c0 {
    max-block-size: May;
  }
}

@media June {
  .c0 {
    max-block-size: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`maxBlockSize renders postitive number 1`] = `
Array [
  .c0 {
  max-block-size: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  max-block-size: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  max-block-size: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  max-block-size: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`maxBlockSize renders string 1`] = `
Array [
  .c0 {
  max-block-size: July;
}

<div
    className="c0"
  />,
  .c0 {
  max-block-size: July;
}

<div
    className="c0"
  />,
  .c0 {
  max-block-size: June;
}

<div
    className="c0"
  />,
  .c0 {
  max-block-size: June;
}

<div
    className="c0"
  />,
]
`;

exports[`maxBlockSize renders undefined 1`] = `
Array [
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
]
`;

exports[`maxBlockSize renders valid theme path 1`] = `
Array [
  .c0 {
  max-block-size: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  max-block-size: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  max-block-size: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  max-block-size: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
